--- a/src/Cms/CoreBundle/Resources/public/css/contentType/read.css
+++ b/src/Cms/CoreBundle/Resources/public/css/contentType/read.css
@@ -40,10 +40,19 @@ h1 {
 #pag-previous {
     margin-right: 12px;
 }
-table {
-    margin-top: 20px;
-}
 #master-checkbox-container {
     position: relative;
     top: 12px;
+}
+.checkbox-td {
+    margin-top: 6px;
+}
+table {
+    margin-top: 20px;
+}
+table a {
+    text-decoration: none;
+}
+table thead {
+    font-size: 16px;
 }
