--- a/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
@@ -1,5 +1,23 @@
 {% extends 'CmsCoreBundle:App:base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {% stylesheets
+        '@CmsCoreBundle/Resources/public/css/node/read.css'
+        filter='cssrewrite, ?yui_css' %}
+        <link rel="stylesheet" href="{{ asset_url }}"/>
+    {% endstylesheets %}
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {% javascripts
+        '@CmsCoreBundle/Resources/public/js/node/read.js'
+        filter='?yui_js' %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+{% endblock %}
+
 {% block title %}
     {% if node is defined %}
         {{ node.title|title }}
@@ -19,30 +37,53 @@
         </div>
     </section>
     <div class="row-fluid">
-        <div class="span10">
+        {% block notices %}
+            {{ parent() }}
+        {% endblock %}
+    </div>
+    <div class="row-fluid">
+        <div class="span9">
             <form action="{{ path('cms_core.node_save') }}" method="post">
                 <input type="hidden" name="token" value="{{ token }}"/>
+                <input type="hidden" name="id" value="{{ node.id|default() }}"/>
                 <input type="hidden" name="siteId" value="{{ site.id }}"/>
                 <input type="hidden" name="contentTypeId" value="{{ contentType.id }}"/>
                 <input type="hidden" name="contentTypeName" value="{{ contentType.name }}"/>
                 <input type="hidden" name="format" value="single"/>
+                <input type="hidden" name="authorName" value="{{ user.name('first_last') }}"/>
                 <input type="hidden" name="templateName" value="{{ site.name }}:Master:Single"/>
                 <input type="hidden" name="slugPrefix" value="{{ contentType.slugPrefix }}"/>
-
-                <input type="text" name="title" value="{{ node.title | default() }}" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,64}$" placeholder="title"/>
-                <input type="text" name="host" value="www.{{ site.domains[0] }}"/>/{{ contentType.slugPrefix }}<input type="text" name="slug" value="{{ node.slug | default() }}" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,64}$" placeholder="slug" required/>
-                <div>
-                    <textarea name="viewHtml" id="view-html" cols="20" rows="20" placeholder="html here">{{ node.views['html'] | default() | raw }}</textarea>
+                <input type="hidden" id="host" name="host" value="{{ site.domains[0] }}" />
+                <input type="hidden" id='slug' name="slug" value="{{ node.slug|default() }}" class="span3" style="display: inline" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,64}$" placeholder="slug" required/>
+                <div id="url-container">
+                    {% if node.slug %}
+                        {% if node.slug != contentType.slugPrefix ~ node.title | lower %}
+                            <span id="host-container">{{ site.domains[0] }}/</span id='slug-full'>{{ node.slug }}</span>
+                        {% else %}
+                            <span id="host-container">{{ site.domains[0] }}/<span id="slug-prefix-container">{{ contentType.slugPrefix }}</span><span id="slug-container">{{ node.title }}</span>
+                        {% endif %}
+                    {% else %}
+                        <span id="host-container">{{ site.domains[0] }}/</span><span id="slug-prefix-container">{{ contentType.slugPrefix }}</span><span id="slug-container"></span>
+                    {% endif %}
                 </div>
-                <p><input type="submit" value="Save"/></p>
+                <div class="row-fluid">
+                    <div class="span12">
+                        <input type="text" name="title" value="{% if node is defined %}{{ node.title }}{% else %}{{ title|default() }}{% endif %}" id="title" class="span12" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,64}$" placeholder="Title" required/>
+                    </div>
+                </div>
+                <div class="row-fluid">
+                    <div class="span12">
+                        <textarea name="viewHtml" id="view-html" class="span12" placeholder="Add your content here" required>{% if node is defined %}{{ node.views['html'] | default() }}{% else %}{{ viewHtml|default()}}{% endif %}</textarea>
+                    </div>
+                </div>
+                <p><input type="submit" value="Save" class="btn btn-large btn-info pull-right"/></p>
             </form>
         </div>
-        <div class="span2">
-            side
+        <div class="span3">
         </div>
     </div>
 
     <nav>
-        <a href="{{ path('cms_core.site_read', {'id':site.id}) }}">Back to Site {{ site.name | title }}</a>
+        <a href="{{ path('cms_core.contentType_read', {'id':contentType.id, 'siteId':site.id}) }}">Back to {{ contentType.name|title }}</a>
     </nav>
 {% endblock %}
