--- a/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
@@ -87,12 +87,12 @@
     <hr>
     <div class="row-fluid">
         <div class="span4">
-            <button class="btn btn-lower btn-checkbox-action" data-action='edit' id='edit'><i class="icon-edit"></i> Edit</button>
-            <button class="btn btn-lower btn-checkbox-action" data-action='delete' id='delete'><i class="icon-trash"></i> Trash</button>
+            <button class="btn btn-inverse btn-lower btn-checkbox-action" data-action='edit' id='edit'><i class="icon-edit"></i> Edit</button>
+            <button class="btn btn-inverse btn-lower btn-checkbox-action" data-action='delete' id='delete'><i class="icon-trash"></i> Trash</button>
         </div>
         <div class="span4 offset4">
-            <a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id, 'page':page+1}) }}" class="btn btn-lower pull-right" id='pag-next'>Next <i class="icon-chevron-right"></i></a>
-            <a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id, 'page':page-1}) }}" class="btn btn-lower pull-right" id='pag-previous'><i class="icon-chevron-left"></i> Prev</a>
+            <a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id, 'page':page+1}) }}" class="btn btn-inverse btn-lower pull-right" id='pag-next'>Next <i class="icon-chevron-right"></i></a>
+            <a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id, 'page':page-1}) }}" class="btn btn-inverse btn-lower pull-right" id='pag-previous'><i class="icon-chevron-left"></i> Prev</a>
         </div>
     </div>
     <div class="row-fluid">
@@ -152,5 +152,5 @@
         </div>
     </div>
     <input type="hidden" id="token" value="{{ token }}"/>
-    <input type="hidden" id="baseRoot" value="{{ app.request.baseUrl }}"/>
+    <input type="hidden" id="baseRoot" value=""/>
 {% endblock %}
