--- a/src/Cms/CoreBundle/Resources/views/App/components.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/App/components.html.twig
@@ -12,9 +12,11 @@
 {% block notices %}
     {% if notices is not empty %}
         <aside>
-            <h3>Notice</h3>
             {% for notice in notices  %}
-                <p>{{ notice }}</p>
+                <div class="alert alert-info">
+                    <button type="button" class="close" data-dismiss="alert" style='color: white'>&times;</button>
+                    <i class="icon-bullhorn" style="margin-right: 5px;"></i> {{ notice }}
+                </div>
             {% endfor %}
         </aside>
     {% endif %}
