--- a/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
@@ -37,9 +37,11 @@
         </div>
     </section>
     <div class="row-fluid">
-        {% block notices %}
-            {{ parent() }}
-        {% endblock %}
+        <div class="span9">
+            {% block notices %}
+                {{ parent() }}
+            {% endblock %}
+        </div>
     </div>
     <div class="row-fluid">
         <div class="span9">
@@ -54,9 +56,9 @@
                 <input type="hidden" name="templateName" value="{{ site.name }}:Master:Single"/>
                 <input type="hidden" name="slugPrefix" value="{{ contentType.slugPrefix }}"/>
                 <input type="hidden" id="host" name="host" value="{{ site.domains[0] }}" />
-                <input type="hidden" id='slug' name="slug" value="{{ node.slug|default() }}" class="span3" style="display: inline" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,64}$" placeholder="slug" required/>
+                <input type="hidden" id='slug' name="slug" value="{{ node.slug|default() }}" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,64}$" placeholder="slug" required/>
                 <div id="url-container">
-                    {% if node.slug %}
+                    {% if node.slug is defined %}
                         {% if node.slug != contentType.slugPrefix ~ node.title | lower %}
                             <span id="host-container">{{ site.domains[0] }}/</span id='slug-full'>{{ node.slug }}</span>
                         {% else %}
