updated alerts for notices js

--- a/src/Cms/CoreBundle/Resources/public/css/contentType/read.css
+++ b/src/Cms/CoreBundle/Resources/public/css/contentType/read.css
@@ -47,6 +47,11 @@ h1 {
 .checkbox-td {
     margin-top: 6px;
 }
+#content-type-alert {
+    text-align: center;
+    font-size: 15px;
+    margin-bottom: 0px;
+}
 table {
     margin-top: 20px;
 }
