--- a/src/Cms/CoreBundle/Resources/public/css/node/read.css
+++ b/src/Cms/CoreBundle/Resources/public/css/node/read.css
@@ -8,3 +8,7 @@ input[type="text"], textarea {
 #view-html {
     min-height: 400px;
 }
+#notice-container {
+    position: relative;
+    top: 18px;
+}
