--- a/src/Cms/CoreBundle/Resources/public/css/node/read.css
+++ b/src/Cms/CoreBundle/Resources/public/css/node/read.css
@@ -2,8 +2,7 @@ input[type="text"], textarea {
     font-size: 18px;
 }
 #url-container{
-    padding: 10px 0px 0px 0px;
-    font-size: 20px;
+    padding: 10px 0px 20px 0px;
     font-size: 22px;
 }
 #view-html {
@@ -19,4 +18,15 @@ input[type="text"], textarea {
 }
 .label:hover {
     cursor: pointer;
+}
+#domain-container {
+    margin-bottom: 20px;
+}
+#domain-selector {
+    margin-top: -20px;
+    margin-bottom: 24px;
+}
+#slug-selector {
+    margin-top: -20px;
+    margin-bottom: 24px;
 }
