--- a/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
@@ -13,6 +13,8 @@
     {{ parent() }}
     {% javascripts
         '@CmsCoreBundle/Resources/public/js/node/read.js'
+        '@CmsCoreBundle/Resources/public/js/node/nodeUrlHandler.js'
+        'flat-ui/js/flatui-radio.js'
         filter='?yui_js' %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
@@ -51,29 +53,68 @@
                 <input type="hidden" name="authorName" value="{{ user.name('first_last') }}"/>
                 <input type="hidden" name="templateName" value="{{ site.name }}:Master:Single"/>
                 <input type="hidden" name="slugPrefix" value="{{ contentType.slugPrefix }}"/>
-                <input type="hidden" id="domain" name="domain" value="{{ site.domains[0] }}" />
+                <input type="hidden" id="domain" name="domain" value="{% if node.domain is defined %}{{ node.domain }}{% else %}{{ site.domains[0] }}{% endif %}" />
                 <input type="hidden" id='slug' name="slug" value="{{ node.slug|default() }}" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,64}$" placeholder="slug" required/>
                 <div id="url-container">
                     {% if node.slug is defined %}
                         {% if node.slug != contentType.slugPrefix ~ node.title | lower %}
-                            <span id="host-container" class="label label-info">{{ site.domains[0] }}</span> / <span id='slug-full' class="label label-info">{{ node.slug|trim('/') }}</span>
+                            <span id="domain-container" class="label label-info">
+                                {% if node.domain is defined %}
+                                    {{ node.domain }}
+                                {% else %}
+                                    {{ site.domains[0] }}
+                                {% endif %}
+                            </span> / <span id='slug-full' class="label label-info">{{ node.slug|trim('/') }}</span>
                         {% else %}
-                            <span id="host-container" class="label label-info">{{ site.domains[0] }}</span> / <span id="slug-prefix-container" class="label label-info">{{ contentType.slugPrefix|trim('/') }}</span> / <span id="slug-container" class="label label-info">{{ node.title }}</span>
+                            <span id="domain-container" class="label label-info">
+                                {% if node.domain is defined %}
+                                    {{ node.domain }}
+                                {% else %}
+                                    {{ site.domains[0] }}
+                                {% endif %}
+                            </span> / <span id="slug-prefix-container" class="label label-info">{{ contentType.slugPrefix|trim('/') }}</span> / <span id="slug-container" class="label label-info">{{ node.title }}</span>
                         {% endif %}
                     {% else %}
-                        <span id="host-container" class="label label-info">{{ site.domains[0] }}</span> / <span id="slug-prefix-container" class="label label-info">{{ contentType.slugPrefix|trim('/') }}</span> / <span id="slug-container" class="label label-info"></span>
+                        <span id="domain-container" class="label label-info">
+                            {% if node.domain is defined %}
+                                {{ node.domain }}
+                            {% else %}
+                                {{ site.domains[0] }}
+                            {% endif %}
+                        </span> / <span id="slug-prefix-container" class="label label-info">{{ contentType.slugPrefix|trim('/') }}</span> / <span id="slug-container" class="label label-info"></span>
                     {% endif %}
                 </div>
-                <div class="row-fluid">
-                    <div class="span12">
-                        {% for domain in site.domains  %}
-                            {{ domain }}
-                        {% endfor %}
+                <div class="row-fluid hide" id="domain-selector-container">
+                    <div class="span4">
+                        <div id="domain-selector">
+                            {% for domain in site.domains  %}
+                                <label class="radio radio-domain">
+                                    <input type="radio" name="domainSelector" data-domain="{{ domain }}"  value="{{ domain }}" data-toggle="radio"
+                                       {% if node.domain is defined %}
+                                           {% if node.domain == domain %}checked{% endif %}
+                                        {% endif %}
+                                    >{{ domain }}
+                                </label>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+                <div class="row-fluid hide" id="slug-selector-container">
+                    <div class="span4">
+                        <div id="slug-selector">
+                            <label class="radio radio-slug" data-slug-type="title">
+                                <input type="radio" name="slugType" data-toggle="radio" />Use the title
+                            </label>
+                            <label class="radio radio-slug" data-slug-type="custom">
+                                <input type="radio" name="slugType" data-toggle="radio"/> Use a custom slug
+                            </label>
+                            <input type="text" name="customSlug" placeholder="custom slug" id='input-custom-slug' class="span8 hide"/>
+                        </div>
                     </div>
                 </div>
                 <div class="row-fluid">
                     <div class="span12">
-                        <input type="text" name="title" value="{% if node is defined %}{{ node.title }}{% else %}{{ title|default() }}{% endif %}" id="title" class="span12" pattern="^[a-zA-Z][a-zA-Z0-9- \.]{1,64}$" title="title can only contain letters, numbers and spaces. It must be less than 64 characters." placeholder="Title" required/>
+                        <input type="text" name="title" value="{% if node is defined %}{{ node.title }}{% else %}{{ title|default() }}{% endif %}" id="title" data-slug-title='on' class="span12" pattern="^[a-zA-Z][a-zA-Z0-9- \.]{1,64}$" title="title can only contain letters, numbers and spaces. It must be less than 64 characters." placeholder="Title" required/>
                     </div>
                 </div>
                 <div class="row-fluid">
