--- a/src/Cms/CoreBundle/Resources/public/css/contentType/read.css
+++ b/src/Cms/CoreBundle/Resources/public/css/contentType/read.css
@@ -62,3 +62,12 @@ table a {
 table thead {
     font-size: 16px;
 }
+.ui-datepicker {
+    margin-top: 10px;
+}
+#flatui-calendar-input-container{
+    margin-top: 50px;
+}
+#flatui-calendar-input-button-container {
+    margin-top: 10px;
+}
