--- a/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
@@ -30,7 +30,7 @@
 {% block content %}
     {{ parent() }}
     <div class="row-fluid">
-        <div class="span4" id='header'>
+        <div class="span6" id='header'>
             <h1>{{ contentType.name|title }}</h1>
             <a href="{{ path('cms_core.node_new', {'siteId':site.id, 'contentTypeId':contentType.id}) }}" id="add-new"><i class="icon-plus-sign"></i> Add New</a>
         </div>
@@ -86,14 +86,22 @@
             </select>
         </div>
         <div class="span2">
-            <select name="author" value="author" class="select-block span2">
-                <option value="0">View All Authors</option>
-                {% for tag in contentType.tags   %}
-                    <option value="{{ category.tag }}">{{ category.tag }}</option>
-                {% else %}
-                    <option value="0">none found</option>
-                {% endfor %}
-            </select>
+            <button class="btn btn-info span12" id='author-opener'>
+                <span class="pull-left" id='author-opener-text'>View All Authors</span>
+                <span class="caret pull-right"></span>
+            </button>
+            <div class="row-fluid hide" id="author-container">
+                <div class="span12">
+                    <label for="author-first-name">First Name:</label>
+                    <input type="text" class="span12" id="author-first-name"/>
+                    <label for="author-last-name">Last Name:</label>
+                    <input type="text" class="span12" id="author-last-name"/>
+                    <div class="row-fluid" id="author-input-button-container">
+                        <button class="btn span6" id="author-cancel">clear</button>
+                        <button class="btn btn-info span6" id='author-confirm'>ok</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="span2">
             <button class="btn btn-info btn-block"><i class="icon-filter"></i> Filter</button>
