began to setup repo queries for  content type view

--- a/web/flat-ui/custom/css/custom.css
+++ b/web/flat-ui/custom/css/custom.css
@@ -112,3 +112,6 @@ input[type="color"]:focus,
 .uneditable-input:focus {
     border-color: #3498DB;
 }
+.table tbody tr:hover td {
+    background-color: #ECF0F1;
+}
