--- a/src/Cms/CoreBundle/Resources/public/css/contentType/read.css
+++ b/src/Cms/CoreBundle/Resources/public/css/contentType/read.css
@@ -24,15 +24,14 @@ h1 {
         max-width: none;
     }
 }
-#edit, #delete {
-    max-width: 72px;
-    padding-right: 10px; padding-left: 10px;
+.edit, .delete {
+    max-width: 79px;
 }
-#pag-next, #pag-previous {
-    max-width: 72px;
+.pag-next, .pag-previous {
+    max-width: 80px;
 }
-#pag-previous {
-    margin-right: 10px;
+.pag-previous {
+    margin-right: 8px;
 }
 @media (max-width: 1170px) {
     .btn-lower > i {
