--- a/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
@@ -16,6 +16,7 @@
         'flat-ui/js/bootstrap-select.js'
         'flat-ui/js/flatui-checkbox.js'
         'flat-ui/js/flatui-calendar.js'
+        'flat-ui/js/jquery.tagsinput.js'
         '@CmsCoreBundle/Resources/public/js/checkboxList.js'
         '@CmsCoreBundle/Resources/public/js/contentType/read.js'
         filter='?yui_js' %}
@@ -35,7 +36,7 @@
             <a href="{{ path('cms_core.node_new', {'siteId':site.id, 'contentTypeId':contentType.id}) }}" id="add-new"><i class="icon-plus-sign"></i> Add New</a>
         </div>
         <div class="span4 pull-right" id="search-container">
-            <input type="search" id="search" class="span2 pull-right" placeholder="Search for {{ contentType.name | title }}"/>
+            <input type="search" id="search" class="span2 pull-right" placeholder="Search for {{ contentType.name | title }} "/>
         </div>
     </div>
     <div class="row-fluid">
@@ -54,9 +55,9 @@
             </button>
             <div class="row-fluid hide" id='flatui-calendar-input-container'>
                 <div class="span12">
-                    <label for="start-date" class="date-input-label">from:</label>
+                    <label for="start-date" class="date-input-label">From:</label>
                     <input type="text" class="flatui-calendar-input-start date-input span12" id='start-date'/>
-                    <label for="end-date" class="date-input-label">to:</label>
+                    <label for="end-date" class="date-input-label">To:</label>
                     <input type="text" class="flatui-calendar-input-end date-input span12" id='end-date'/>
                     <div class="row-fluid" id="flatui-calendar-input-button-container">
                             <button class="btn span6" id="flatui-calendar-cancel-dates">clear</button>
@@ -66,24 +67,38 @@
             </div>
         </div>
         <div class="span2">
-            <select name="category" value="category" class="select-block span2">
-                <option value="0">View All Categories</option>
-                {% for category in contentType.categories   %}
-                    <option value="{{ category.parent }}">{{ category.parent }}</option>
-                {% else %}
-                    <option value="">None found</option>
-                {% endfor %}
-            </select>
+            <button class="btn btn-info span12" id='category-opener'>
+                <span class="pull-left" id='category-opener-text'>View Categories</span>
+                <span class="caret pull-right"></span>
+            </button>
+            <div class="row-fluid hide" id="category-container">
+                <div class="span12">
+                    <label for="category-parent">Parent:</label>
+                    <input type="text" class="span12" id="category-parent"/>
+                    <label for="category-sub">Sub:</label>
+                    <input type="text" class="span12" id="category-sub"/>
+                    <div class="row-fluid" id="category-button-container">
+                        <button class="btn span6" id="category-cancel">clear</button>
+                        <button class="btn btn-info span6" id='category-confirm'>ok</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="span2">
-            <select name="tag" value="tag" class="select-block span2">
-                <option value="0">View All Tags</option>
-                {% for tag in contentType.tags   %}
-                    <option value="{{ category.tag }}">{{ category.tag }}</option>
-                {% else %}
-                    <option value="0">none found</option>
-                {% endfor %}
-            </select>
+            <button class="btn btn-info span12" id='tag-opener'>
+                <span class="pull-left" id='tag-opener-text'>View All Tags</span>
+                <span class="caret pull-right"></span>
+            </button>
+            <div class="row-fluid hide" id="tag-container">
+                <div class="span12">
+                    <label for="tags">Tags:</label>
+                    <input type="text"  class="span12" name='tags' id="tags" />
+                    <div class="row-fluid" id="tag-button-container">
+                        <button class="btn span6" id="tag-cancel">clear</button>
+                        <button class="btn btn-info span6" id='tag-confirm'>ok</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="span2">
             <button class="btn btn-info span12" id='author-opener'>
@@ -110,8 +125,8 @@
     <hr>
     <div class="row-fluid">
         <div class="span4">
-            <button class="btn btn-inverse btn-lower span3 btn-checkbox-action" data-action='edit' id='edit'><i class="icon-edit"></i> Edit</button>
-            <button class="btn btn-inverse btn-lower span3 btn-checkbox-action" data-action='delete' id='delete'><i class="icon-trash"></i> Trash</button>
+            <button class="btn btn-inverse btn-lower span3 btn-checkbox-action edit" data-action='edit'><i class="icon-edit"></i> Edit</button>
+            <button class="btn btn-inverse btn-lower span3 btn-checkbox-action delete" data-action='delete'><i class="icon-trash"></i> Trash</button>
         </div>
         <div class="span4" id='notices'>
             {% block notices %}
@@ -119,13 +134,13 @@
             {% endblock %}
         </div>
         <div class="span4">
-            <a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id, 'page':page+1}) }}" class="btn btn-inverse btn-lower span3 pull-right" id='pag-next'>Next <i class="icon-chevron-right"></i></a>
-            <a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id, 'page':page-1}) }}" class="btn btn-inverse btn-lower span3 pull-right" id='pag-previous'><i class="icon-chevron-left"></i> Prev</a>
+            <a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id, 'page':page+1}) }}" class="btn btn-inverse btn-lower span3 pull-right pag-next" {% if nodes.count < 5 %}disabled='disabled'{% endif %}>Next <i class="icon-chevron-right"></i></a>
+            <a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id, 'page':page-1}) }}" class="btn btn-inverse btn-lower span3 pull-right pag-previous" {% if page <= 1 %}disabled='disabled'{% endif %}><i class="icon-chevron-left"></i> Prev</a>
         </div>
     </div>
     <div class="row-fluid">
         <div class="span12">
-            <table class="table">
+            <table class="table table-hover">
                 <thead>
                 <tr>
                     <th>
@@ -152,8 +167,10 @@
                     <td>
                         <h4><a href="/{{ node.slug }}">{{ node.title|title }}</a></h4>
                         <p class='node-preview'>
-                            {{ node.views['html']|striptags }}
-                            <a href="/{{ node.slug }}">read more</a>
+                            {{ node.views['html']|striptags|truncate(203) }}
+                            {% if node.views['html']|striptags|length > 203 %}
+                                <a href="/{{ node.slug }}">read more</a>
+                            {% endif %}
                         </p>
                     </td>
                     {% if node.author.name is defined %}
@@ -172,13 +189,25 @@
                         {% endfor %}
                     </td>
                     <td>{{ comment|default()|length }}</td>
-                    <td>{{ node.created|date('m/d/y g:i a') }}</td>
+                    <td>{{  node.created }}</td>
                 </tr>
                 {% endfor %}
                 </tbody>
             </table>
         </div>
     </div>
+    {% if nodes.count > 5 %}
+        <div class="row-fluid">
+            <div class="span4">
+                <button class="btn btn-inverse btn-lower span3 btn-checkbox-action edit" data-action='edit'><i class="icon-edit"></i> Edit</button>
+                <button class="btn btn-inverse btn-lower span3 btn-checkbox-action delete" data-action='delete'><i class="icon-trash"></i> Trash</button>
+            </div>
+            <div class="span4 offset4">
+                <a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id, 'page':page+1}) }}" class="btn btn-inverse btn-lower span3 pull-right pag-next">Next <i class="icon-chevron-right"></i></a>
+                <a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id, 'page':page-1}) }}" class="btn btn-inverse btn-lower span3 pull-right pag-previous" {% if page <= 1 %}disabled='disabled'{% endif %}><i class="icon-chevron-left"></i> Prev</a>
+            </div>
+        </div>
+    {% endif %}
     <input type="hidden" id="token" value="{{ token }}"/>
     <input type="hidden" id="baseRoot" value="{{ app.request.baseUrl }}"/>
 {% endblock %}
