prod dump and patched edit contentType bug

--- a/src/Cms/CoreBundle/Resources/views/App/components.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/App/components.html.twig
@@ -36,7 +36,7 @@
             <div class="nav-collapse collapse" id="nav-collapse-01">
                 <ul class="nav">
                     <li class="brand">
-                        <a href="{{ path('cms_core.site_read', {'id': site.id}) }}"><img src="{{ asset('ovooko_logo_large.png') }}" alt="" width="120" height="12.75" style="margin-top: -20px"/></a>
+                        <a href="{{ path('cms_core.site_read', {'id': site.id}) }}"><img src="" alt="" width="120" height="12.75"/></a>
                     </li>
                     <li class="active">
                         <a href="#fakelink">
