--- a/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
@@ -236,4 +236,5 @@
     {% endif %}
     <input type="hidden" id="token" value="{{ token }}"/>
     <input type="hidden" id="page" value="{{ page }}"/>
+    <input type="hidden" id='baseUrl' value="{{ app.request.baseUrl }}"/>
 {% endblock %}
