--- a/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
@@ -160,8 +160,8 @@
             {% endblock %}
         </div>
         <div class="span4">
-            <a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id, 'page':page+1}) }}" class="btn btn-inverse btn-lower span3 pull-right pag-next" {% if nodes.count < 5 %}disabled='disabled'{% endif %}>Next <i class="icon-chevron-right"></i></a>
-            <a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id, 'page':page-1}) }}" class="btn btn-inverse btn-lower span3 pull-right pag-previous" {% if page <= 1 %}disabled='disabled'{% endif %}><i class="icon-chevron-left"></i> Prev</a>
+            <button class="btn btn-inverse btn-lower span3 pull-right pag-next" {% if nextPage == false %}disabled="disabled"{% endif %}>Next <i class="icon-chevron-right"></i></button>
+            <button class="btn btn-inverse btn-lower span3 pull-right pag-previous" {% if page <= 1 %}disabled='disabled'{% endif %}><i class="icon-chevron-left"></i> Prev</button>
         </div>
     </div>
     <div class="row-fluid">
@@ -229,7 +229,7 @@
                 <button class="btn btn-inverse btn-lower span3 btn-checkbox-action delete" data-action='delete'><i class="icon-trash"></i> Trash</button>
             </div>
             <div class="span4 offset4">
-                <button class="btn btn-inverse btn-lower span3 pull-right pag-next">Next <i class="icon-chevron-right"></i></button>
+                <button class="btn btn-inverse btn-lower span3 pull-right pag-next" {% if nextPage == false %}disabled="disabled"{% endif %}>Next <i class="icon-chevron-right"></i></button>
                 <button class="btn btn-inverse btn-lower span3 pull-right pag-previous" {% if page <= 1 %}disabled='disabled'{% endif %}><i class="icon-chevron-left"></i> Prev</button>
             </div>
         </div>
