removed text for action buttons on contentType view mobile

--- a/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
@@ -177,12 +177,12 @@
         <div class="row-fluid visible-phone">
             <div class="span12">
                 <span class="pull-left">
-                    <button class="btn btn-inverse btn-checkbox-action" data-action='edit'><i class="icon-edit mobile-icon"></i>edit</button>
-                    <button class="btn btn-inverse btn-checkbox-action" data-action='delete'><i class="icon-trash mobile-icon"></i>trash</button>
+                    <button class="btn btn-inverse btn-checkbox-action" data-action='edit'><i class="icon-edit mobile-icon"></i></button>
+                    <button class="btn btn-inverse btn-checkbox-action" data-action='delete'><i class="icon-trash mobile-icon"></i></button>
                 </span>
                 <span class="pull-right">
-                    <button class="btn btn-inverse pag-previous"><i class="icon-chevron-left mobile-icon"></i>prev</button>
-                    <button class="btn btn-inverse pag-next">next<i class="icon-chevron-right mobile-icon"></i></button>
+                    <button class="btn btn-inverse pag-previous"><i class="icon-chevron-left mobile-icon"></i></button>
+                    <button class="btn btn-inverse pag-next"><i class="icon-chevron-right mobile-icon"></i></button>
                 </span>
             </div>
         </div>
@@ -258,12 +258,12 @@
             <div class="row-fluid visible-phone">
                 <div class="span12">
                 <span class="pull-left">
-                    <button class="btn btn-inverse btn-checkbox-action" data-action='edit'><i class="icon-edit mobile-icon"></i>edit</button>
-                    <button class="btn btn-inverse btn-checkbox-action" data-action='delete'><i class="icon-trash mobile-icon"></i>trash</button>
+                    <button class="btn btn-inverse btn-checkbox-action" data-action='edit'><i class="icon-edit mobile-icon"></i></button>
+                    <button class="btn btn-inverse btn-checkbox-action" data-action='delete'><i class="icon-trash mobile-icon"></i></button>
                 </span>
                 <span class="pull-right">
-                    <button class="btn btn-inverse pag-previous"><i class="icon-chevron-left mobile-icon"></i>prev</button>
-                    <button class="btn btn-inverse pag-next">next<i class="icon-chevron-right mobile-icon"></i></button>
+                    <button class="btn btn-inverse pag-previous"><i class="icon-chevron-left mobile-icon"></i></button>
+                    <button class="btn btn-inverse pag-next"><i class="icon-chevron-right mobile-icon"></i></button>
                 </span>
                 </div>
             </div>
