--- a/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
@@ -109,7 +109,7 @@
                 </div>
                 <div class="row-fluid">
                     <div class="span12">
-                        <input type="text" name="title" value="{% if node is defined %}{{ node.title }}{% else %}{{ title|default() }}{% endif %}" id="title" data-slug-title='on' class="span12" pattern="^[a-zA-Z][a-zA-Z0-9- \.]{1,64}$" title="title can only contain letters, numbers and spaces. It must be less than 64 characters." placeholder="Title" required/>
+                        <input type="text" name="title" value="{% if node is defined %}{{ node.title }}{% else %}{{ title|default() }}{% endif %}" id="title" data-slug-title="{% if isTitleSlug %}on{% else %}off{% endif %}" class="span12" pattern="^[a-zA-Z][a-zA-Z0-9- \.]{1,64}$" title="title can only contain letters, numbers and spaces. It must be less than 64 characters." placeholder="Title" required/>
                     </div>
                 </div>
                 <div class="row-fluid">
@@ -123,8 +123,8 @@
         <div class="span3">
         </div>
     </div>
-
     <nav>
         <a href="{{ path('cms_core.contentType_read', {'id':contentType.id, 'siteId':site.id}) }}">Back to {{ contentType.name|title }}</a>
     </nav>
+    <input type="hidden" id="state" value="{{ node.state|default('draft') }}"/>
 {% endblock %}
