--- a/src/Cms/CoreBundle/Resources/public/css/contentType/read.css
+++ b/src/Cms/CoreBundle/Resources/public/css/contentType/read.css
@@ -28,6 +28,9 @@ h1 {
     font-size: 15px;
     margin-bottom: 0px;
 }
+#input-state {
+    background-color: #3498DB;
+}
 table {
     margin-top: 20px;
 }
