--- a/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
@@ -3,58 +3,60 @@
 {% block stylesheets %}
     {{ parent() }}
     {% stylesheets
+        'flat-ui/calendar/jquery-ui-1.10.3.custom.min.css'
         '@CmsCoreBundle/Resources/public/css/node/read.css'
         filter='cssrewrite, ?yui_css' %}
-        <link rel="stylesheet" href="{{ asset_url }}"/>
+    <link rel="stylesheet" href="{{ asset_url }}" xmlns="http://www.w3.org/1999/html"/>
     {% endstylesheets %}
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
     {% javascripts
+        'flat-ui/js/flatui-radio.js'
+        'flat-ui/js/bootstrap-select.js'
+        'flat-ui/js/flatui-checkbox.js'
+        'flat-ui/js/flatui-calendar.js'
+        'flat-ui/js/jquery.tagsinput.js'
+        '@CmsCoreBundle/Resources/public/js/mediaUpload.js'
         '@CmsCoreBundle/Resources/public/js/node/read.js'
         '@CmsCoreBundle/Resources/public/js/node/nodeUrlHandler.js'
-        'flat-ui/js/flatui-radio.js'
         filter='?yui_js' %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
 {% endblock %}
 
 {% block title %}
-    {% if node is defined %}
-        {{ node.title|title }}
+    {% if node %}
+        Edit {{ node.title|title }} {{ parent() }}
      {% else %}
-        Create a New {{ contentType.name|title }}
+        Create a New {{ contentType.name|title }} {{ parent() }}
     {% endif %}
 {% endblock %}
 
 {% block content %}
     <section class="row-fluid">
-        <div class="span6">
-            {% if node is defined %}
+        <div class="span12">
+            {% if node %}
                 <h1>Edit {{ node.title|title }}</h1>
              {% else %}
                  <h1>Create a New {{ contentType.name | title }}</h1>
             {% endif %}
         </div>
-        <div class="span3 hide" id='notice-container'>
-            {% block notices %}{{ parent() }}{% endblock %}
-        </div>
     </section>
-    <div class="row-fluid">
+    <section class="row-fluid">
         <div class="span9">
             <form action="{{ path('cms_core.node_save') }}" method="post">
-                <input type="hidden" name="token" value="{{ token }}"/>
-                <input type="hidden" name="id" value="{{ node.id|default() }}"/>
-                <input type="hidden" name="siteId" value="{{ site.id }}"/>
-                <input type="hidden" name="contentTypeId" value="{{ contentType.id }}"/>
-                <input type="hidden" name="contentTypeName" value="{{ contentType.name }}"/>
-                <input type="hidden" name="format" value="single"/>
-                <input type="hidden" name="authorName" value="{{ user.name('first_last') }}"/>
-                <input type="hidden" name="templateName" value="{{ site.name }}:Master:Single"/>
-                <input type="hidden" name="slugPrefix" value="{{ contentType.slugPrefix }}"/>
-                <input type="hidden" id="domain" name="domain" value="{% if node.domain is defined %}{{ node.domain }}{% else %}{{ site.domains[0] }}{% endif %}" />
-                <input type="hidden" id='slug' name="slug" value="{{ node.slug|default() }}" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,64}$" placeholder="slug" required/>
+                <input type="hidden" name="token" value="{{ token }}" id="input-token"/>
+                <input type="hidden" name="id" value="{{ node.id|default() }}" id="input-id"/>
+                <input type="hidden" name="siteId" value="{{ site.id }}" id="input-site-id"/>
+                <input type="hidden" name="contentTypeId" value="{{ contentType.id }}" id="input-content-type-id"/>
+                <input type="hidden" name="contentTypeName" value="{{ contentType.name }}" id="input-content-type-name"/>
+                <input type="hidden" name="format" value="single" id="input-format"/>
+                <input type="hidden" name="templateName" value="{{ site.name }}:Master:Single" id="input-template-name"/>
+                <input type="hidden" name="slugPrefix" value="{{ contentType.slugPrefix }}" id="input-slug-prefix"/>
+                <input type="hidden" id="domain" name="domain" value="{% if node.domain is defined %}{{ node.domain }}{% else %}{{ site.domains[0] }}{% endif %}" id="input-domain" />
+                <input type="hidden" id='slug' name="slug" value="{{ node.slug|default() }}" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,64}$" id="input-slug" required/>
                 <div id="url-container">
                     <span id="domain-container" class="label label-info">
                         {% if node.domain is defined %}
@@ -92,9 +94,9 @@
                                 {% if not isTitleSlug %}checked{% endif %}
                                 /> Use a custom slug
                             </label>
-                            <div class="row-fluid">
+                            <div class="row-fluid hide" id="input-custom-slug-container">
                                 <div class="span10">
-                                    <input type="text" name="customSlug" placeholder="custom slug" id='input-custom-slug' value="{{ slug }}"  {% if isTitleSlug %}class="span10 hide"{% else %}class="span10"{% endif %}/>
+                                    <input type="text" name="customSlug" placeholder="custom slug" id='input-custom-slug' value="{{ slug }}"  {% if isTitleSlug %}class="span10"{% else %}class="span10"{% endif %}/>
                                 </div>
                                 <div class="span2">
                                     {% if isTitleSlug %}
@@ -109,22 +111,179 @@
                 </div>
                 <div class="row-fluid">
                     <div class="span12">
-                        <input type="text" name="title" value="{% if node is defined %}{{ node.title }}{% else %}{{ title|default() }}{% endif %}" id="title" data-slug-title="{% if isTitleSlug %}on{% else %}off{% endif %}" class="span12" pattern="^[a-zA-Z][a-zA-Z0-9- \.]{1,64}$" title="title can only contain letters, numbers and spaces. It must be less than 64 characters." placeholder="Title" required/>
+                        <input type="text" name="title" value="{% if node %}{{ node.title }}{% else %}{{ title|default() }}{% endif %}" id="title" data-slug-title="{% if isTitleSlug %}on{% else %}off{% endif %}" class="span12" pattern="^[a-zA-Z][a-zA-Z0-9- \.]{1,64}$" title="title can only contain letters, numbers and spaces. It must be less than 64 characters." placeholder="Title" required/>
+                    </div>
+                </div>
+                <div class="row-fluid" id="editor-container">
+                    <div class="span12">
+                        <textarea name="viewHtml" id="view-html" class="span12" placeholder="Add your content here" required>{% if node is defined %}{{ node.views['html'] | default() }}{% else %}{{ viewHtml|default()}}{% endif %}</textarea>
+                    </div>
+                    <a href="#preview" class="preview-node pull-right"><i class="icon-eye-open"></i> Preview</a>
+                </div>
+                <div class="row-fluid">
+                    <div class="span12">
+                        <label for="input-description">Description:</label>
+                        <textarea name="description" id="input-description" class="span12" rows="2" placeholder="description"></textarea>
                     </div>
                 </div>
                 <div class="row-fluid">
                     <div class="span12">
-                        <textarea name="viewHtml" id="view-html" class="span12" placeholder="Add your content here" required>{% if node is defined %}{{ node.views['html'] | default() }}{% else %}{{ viewHtml|default()}}{% endif %}</textarea>
+                        <label for="input-fields">Fields</label>
+                        <textarea name="fields" id="input-fields" class="span12" cols="30" rows="4" placeholder="Fields"></textarea>
                     </div>
                 </div>
-                <p><input type="submit" value="Save" class="btn btn-large btn-info pull-right"/></p>
+                <input type="hidden" name="authorId" id="input-author-id"/>
+                <input type="hidden" name="authorFirstName" id="input-author-first-name" value="{{ user.name.first|title|default() }}"/>
+                <input type="hidden" name="authorLastName" id="input-author-last-name" value="{{ user.name.last|title|default() }}"/>
+                <input type="hidden" name="authorImage" id="input-author-image" value="{{ user.image|default() }}"/>
             </form>
         </div>
         <div class="span3">
+            <div class="row-fluid">
+                <div class="span12" id='notice-container'>
+                    <div id="innner-notice-container">
+                        {% block notices %}{{ parent() }}{% endblock %}
+                    </div>
+                </div>
+            </div>
+            <div class="row-fluid">
+                <div class="span12">
+                    <div class="holder" id='publish-holder'>
+                        <h4>Publish</h4>
+                        <div class="row-fluid">
+                            <div class="span6">
+                                <button class="btn btn-info save-node span12"><i class="icon-save"></i> Save</button>
+                            </div>
+                            <div class="span6">
+                                <button class="btn btn-inverse publish-node span12"><i class="icon-ok-sign"></i> {% if node.state is defined and node.state == 'active' %}Update{% else %}Publish{% endif %}</button>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="span6">
+                                <button class="btn span12 preview-node"><i class="icon-eye-open"></i> Preview</button>
+                            </div>
+                            <div class="span6">
+                                <button class="btn span12" id="state-container-opener"><i class="icon-flag-checkered"></i> Status</button>
+                            </div>
+                        </div>
+                        <div class="row-fluid hide" id='state-container'>
+                            <div class="span12">
+                                <select name="state" class="select-block span2" id="input-state">
+                                    <option value="draft" {% if node and node.state == 'draft' %}selected{% endif %}>Draft</option>
+                                    <option value="pending" {% if node and node.state == 'pending' %}selected{% endif %}>Pending Review</option>
+                                    {% if node.state == 'active' %}
+                                        <option value="active" selected>Publish</option>
+                                    {% endif %}
+                                </select>
+                                <button class="btn btn-primary btn-block hide" id="submit-input-state">ok</button>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="span6">
+                                <button class="btn btn span12 delete-node"><i class="icon-trash"></i> Trash</button>
+                            </div>
+                            <div class="span6">
+                                <button class="btn span12" id="publish-date-container-opener"><i class="icon-calendar"></i> Schedule</button>
+                            </div>
+                        </div>
+                        <div class="row-fluid hide" id="publish-date-container">
+                            <div class="span12">
+                                {#<label for="publish-date">Scheduled for:</label>#}
+                                {#<input type="text" class="span12 flatui-calendar" name="publishDate" id="publish-date"/>#}
+                                <b>scheduling is coming soon</b>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row-fluid">
+                <div class="span12">
+                    <div class="holder" id="categories-holder">
+                        <h4>Categories</h4>
+                        <div class="row-fluid">
+                            <div class="span12" id='categories-inner-container'>
+                                <ul id="category-list">
+                                    {% for category in contentType.categories  %}
+                                        <li {% if category.sub is defined %}
+                                                class="category-indented hide"
+                                            {% else %}
+                                                class="category-parent"
+                                            {% endif %}
+                                            data-parent="{{ category.parent }}">
+                                            <label class="checkbox category-checkbox" style="display: inline" for="checkbox-{{ category.parent }}{% if category.sub is defined %}-{{ category.sub}}{% endif %}">
+                                                <input type="checkbox"  data-toggle="checkbox" name="category-checkbox" id="checkbox-{{ category.parent }}{% if category.sub is defined %}-{{ category.sub }}{% endif %}"/>
+                                                {{ category.parent|title }} {% if category.sub is defined %}- {{ category.sub|title }}{% endif %}
+                                            </label>
+                                            {% if not category.sub is defined %}<i class="icon-chevron-sign-left category-toggle-icon" style="display: inline"></i>{% endif %}
+                                        </li>
+                                    {% else %}
+                                        <li>no categories found</li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="row-fluid">
+                            <div class="span12">
+                                <a href="#categories-holder" id="add-category-opener"><i class="icon-plus-sign"></i> Add a Category</a>
+                            </div>
+                        </div>
+                        <div class="row-fluid hide" id='add-category-container'>
+                            <div class="span12">
+                                <form id="add-category-form">
+                                    <label for="parent">Parent:</label>
+                                    <input type="text" class="span12" id="add-category-parent"/>
+                                    <label for="sub">Sub:</label>
+                                    <input type="text" class="span12" id="add-category-sub"/>
+                                    <div class="row-fluid">
+                                        <button class="btn span6" id='cancel-add-category'>cancel</button>
+                                        <button class="btn btn-primary span6 confirm-add-category">add</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row-fluid">
+                <div class="span12">
+                    <div class="holder" id="tags-holder">
+                        <h4>Tags</h4>
+                        <div class="row-fluid">
+                            <div class="span12">
+                                <input type="text" class="span11" name='tags' id="tags" value="{{ node.tags|default() }}"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row-fluid">
+                <div class="span12">
+                    <div class="holder" id="featured-image-holder">
+                        <h4>Featured Image</h4>
+                        <div class="row-fluid">
+                            <div class="span12">
+                                {% if node and node.image %}
+                                    <img src="{{ node.image }}" width="200"/>
+                                {% else %}
+                                    <button class="btn btn-info">upload</button>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+    </section>
     <nav>
         <a href="{{ path('cms_core.contentType_read', {'id':contentType.id, 'siteId':site.id}) }}">Back to {{ contentType.name|title }}</a>
     </nav>
+    {% block footer %}
+        {{ parent() }}
+    {% endblock %}
+    <input type="hidden" id="base-url" value="{{ app.request.baseUrl }}"/>
+    <input type="hidden" id="save-path" value="{{ path('cms_core.node_save') }}" />
+    <input type="hidden" id="delete-path" value="{{ path('cms_core.node_delete') }}"/>
+    <input type="hidden" id="read-content-type-path" value="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id}) }}"/>
+    <input type="hidden" id="add-category-path" value="{{ path('cms_core.contentType_addCategory') }}"/>
     <input type="hidden" id="state" value="{{ node.state|default('draft') }}"/>
 {% endblock %}
